| Bug #6475 | Another server crash in 5.0.2 | ||
|---|---|---|---|
| Submitted: | 6 Nov 2004 9:38 | Modified: | 10 Nov 2004 11:30 |
| Reporter: | Georg Richter | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 5.0.2 | OS: | Linux (Linux) |
| Assigned to: | Ramil Kalimullin | Target Version: | |
[6 Nov 2004 16:00]
Alexander Keremidarski
bt #0 0x081db16c in free_tmp_table(THD*, st_table*) (thd=0x8656208, entry=0x864f668) at sql_select.cc:8333 #1 0x0810b3f8 in Item_func_group_concat::setup(THD*) (this=0x86692a0, thd=0x8656208) at item_sum.cc:2088 #2 0x081e25f3 in JOIN::make_sum_func_list(List<Item>&, List<Item>&, bool, bool) (this=0x86698c0, field_list=@0x866a5fc, send_fields=@0x864ef18, before_group_by=true, recompute=160) at sql_select.cc:11823 #3 0x081cc4f5 in JOIN::exec() (this=0x86698c0) at sql_select.cc:1461 #4 0x081cd7e4 in mysql_select(THD*, Item***, st_table_list*, unsigned, List<Item>&, Item*, unsigned, st_order*, st_order*, Item*, st_order*, unsigned long, select_result*, st_select_lex_unit*, st_select_lex*) (thd=0x8656208, rref_pointer_array=0x86564f8, tables=0x86694f8, wild_num=0, fields=@0x864ef18, conds=0x0, og_num=1, order=0x0, group=0x86696b8, having=0x86697e8, proc_param=0x0, select_options=8669696, result=0x86698b0, unit=0x8656250, select_lex=0x86563f8) at sql_select.cc:2001 #5 0x081c8c9e in handle_select(THD*, st_lex*, select_result*) (thd=0x8656208, lex=0x8656244, result=0x86698b0) at sql_select.cc:219 #6 0x08196c12 in mysql_execute_command(THD*) (thd=0x8656208) at sql_parse.cc:2085 #7 0x0819d5b8 in mysql_parse(THD*, char*, unsigned) (thd=0x8656208, inBuf=0x86690c8 "SELECT language, group_concat(country) FROM t1 GROUP BY language HAVING count(*) > 5", length=140862020) at sql_parse.cc:4621 #8 0x08195569 in dispatch_command(enum_server_command, THD*, char*, unsigned) (command=COM_QUERY, thd=0x8656208, packet=0x8661069 "SELECT language, group_concat(country) FROM t1 GROUP BY language HAVING count(*) > 5", packet_length=87) at sql_parse.cc:1500 #9 0x08194e47 in do_command(THD*) (thd=0x8656208) at sql_parse.cc:1308 #10 0x081942af in handle_one_connection (arg=0x864ef18) at sql_parse.cc:1044 #11 0x4ba3898c in start_thread () from /lib/tls/libpthread.so.0 #12 0x4b8ba16a in clone () from /lib/tls/libc.so.6
[10 Nov 2004 11:30]
Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: See how to repeat How to repeat: mysql> create table t1 (country char(3), language char(30), primary key(country, language)); Query OK, 0 rows affected (0.06 sec) mysql> insert into t1 values ('ABW', 'Dutch'), ('ABW', 'English'); Query OK, 2 rows affected (0.00 sec) Records: 2 Duplicates: 0 Warnings: 0 mysql> SELECT language, group_concat(country) FROM t1 GROUP BY language HAVING count(*) > 5; ERROR 2013 (HY000): Lost connection to MySQL server during query mysql>