A fix (bug #6475: Another server crash in 5.0.2        bug #6515: count(distinct...) crashes the server)